--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.2",
     "clsx": "^2.1.1",
+    "firebase": "^10.12.0",
     "lucide-react": "^0.344.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
